--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <!--<script src = "/test/test.js" type = "module"></script>-->
   
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +15,14 @@
   <!-- Import the data file -->
   <script src="data.js" type="module"></script>
 
-  <!-- Import the main script file -->
+  <!-- Import the main app script file -->
   <script src="script.js" type="module"></script>
+  
+  <!-- Import camera script file -->
+  <script src="camera.js" type="module"></script>
+  
+  <!-- Link to style sheet -->
+  <link rel="stylesheet" href="style.css">
   
   </head>
   <body>
@@ -28,10 +33,18 @@
   <p><button name = "clickable" value = "visualization"> visualization</button></p>
   </form>
   
-  <canvas id = "myCanvas" width = "25" height = "25">
-  </canvas>
-
+  <canvas id = "myCanvas" width = "25" height = "25">  </canvas>
   
+  <main id = "camera">
+  
+  <canvas id = "cam-in"></canvas>
+  <video id = "cam-view" autoplay playsinline></video>
+  <img src = "//:0" alt = "" id = "cam-out">
+  <button id = "capture">Capture Image</button>
+  
+  </main>
+ 
+
   Result: <output id = "result"> </output>
   
   </body>
