created info-view UI element for front-end (w.i.p.)

--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,10 @@
   </form>
   -->
 
-  <!--
-  <canvas id = "myCanvas" width = "25" height = "25">  </canvas>
+  <!--  -->
+  <!-- <canvas id = "myCanvas" width = "25" height = "25">  </canvas> -->
   
-   -->
+   <!-- --> 
   <main id = "camera">
     
   <!-- canvas where we draw images captured from stream -->
@@ -63,8 +63,17 @@
   <!-- UI element which captures single image for recognition task-->
   <button id = "identify">Identify</button>
   <!-- UI element which captures multiple images for NN training-->
-  <button id = "observe">Observe</button>
+  <button id = "observe" data-toggle="offCanvas">Observe</button>
   <!-- -->
+  
+ 
+  <!-- <div id = "info-view"> -->
+    <!-- <div id = "container"> -->
+      <!-- <ul class="column"> -->
+        <!-- <li>Info</li> -->
+      <!-- </ul> -->
+    <!-- </div> -->
+  <!-- </div> -->
   
   </main>
   
