finished image capture and preprocessing

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   <!-- Import tfjs-vis -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
 
-  <!-- Import the data file -->
-  <script src="data.js" type="module"></script>
+  <!-- Import the data file 
+  <script src="data.js" type="module"></script> -->
 
   <!-- Import the machine learning model script file 
   <script src="mlModel.js" type="module"></script>
@@ -56,9 +56,9 @@
     <img id = "cam-out" src = "//:0" alt = "">
     
       <!-- transform captured images for dataset building -->
-    <!-- <canvas id = "sample-in"></canvas> -->
+    <canvas id = "sample-out"></canvas>
     <img id = "sample-view" src = "//:0" alt = "">
-    <!-- <img id = "sample-out" src = "//:0" alt = ""> -->
+    <!--<img id = "sample-out" src = "//:0" alt = ""> -->
     
     <!-- UI element which captures single image for recognition task-->
     <button id = "identify">Identify</button>
