displays results of number identification in demo mode

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
   <div id = "info-view" class = "small">
     <!-- <header id = "test"> test2 </p> -->
     <header class = "info-header"> 
-      <h3> Locadex </h3>
+      <h3 id = "title" > </h3>
       <div id = "display-toggle" class = "up"></div>
     </header>
     <ul id="data-categories"></ul>
